tests/invalid/unsupported_expression_lambda/main.py
def main() -> None:
    f = lambda x: x + 1
